--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.12",
     "@notionhq/client": "^2.2.5",
     "@react-three/cannon": "^6.5.2",
     "@react-three/drei": "^9.68.3",
     "@react-three/fiber": "^8.13.0",
+    "@types/mdx": "^2.0.5",
     "@types/react-syntax-highlighter": "^15.5.6",
     "@types/three": "^0.152.0",
     "framer-motion": "^10.12.10",
+    "gray-matter": "^4.0.3",
     "next": "^13.4.2",
+    "next-mdx-remote": "^4.4.1",
     "notion-to-md": "^2.7.0",
     "probe-image-size": "^7.2.3",
     "react": "^18.2.0",
@@ -30,7 +36,6 @@
     "three": "^0.152.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.9",
     "@types/probe-image-size": "^7.2.0",
     "@types/react": "18.0.25",
