--- a/package.json
+++ b/package.json
@@ -12,19 +12,16 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.12",
-    "@notionhq/client": "^2.2.5",
     "@react-three/cannon": "^6.5.2",
     "@react-three/drei": "^9.68.3",
-    "@react-three/fiber": "^8.13.0",
+    "@react-three/fiber": "^8.15.16",
+    "@react-three/postprocessing": "^2.16.0",
     "@types/mdx": "^2.0.5",
     "@types/react-syntax-highlighter": "^15.5.6",
     "@types/three": "^0.152.0",
-    "framer-motion": "^10.12.10",
     "gray-matter": "^4.0.3",
-    "next": "^13.4.2",
+    "next": "^14.1.0",
     "next-mdx-remote": "^4.4.1",
-    "notion-to-md": "^2.7.0",
-    "probe-image-size": "^7.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -45,7 +42,7 @@
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4",
-    "typescript": "4.8.4"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
